<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_item_time"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                style="@style/TextView_Style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

                <SeekBar
                    android:id="@+id/seekbar_morning"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:max="210"
                    android:min="0"
                    android:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView_Style1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/working_desc" />

                <EditText
                    android:id="@+id/edt_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/background_input"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLines="2"
                    android:singleLine="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_morning"
                style="@style/TextView_Style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Duration"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/duration_Hour"
                        style="@style/EditText_Style1"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:background="@drawable/background_input"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="2" />

                    <EditText
                        android:id="@+id/duration_Minutes"
                        style="@style/EditText_Style1"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:background="@drawable/background_input"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="2" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>