<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relayout_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_height_header"
                android:background="@color/colorHead">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorBackground"
                android:paddingLeft="20dp">

                <LinearLayout
                    android:id="@+id/layout_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/background_spinner"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/title_project"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></Spinner>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorBlack" />

                    <Spinner
                        android:id="@+id/title_activity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></Spinner>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/layout_spinner"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextView_Style1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:orientation="vertical"
                            android:text="@string/working_day" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:background="@color/colorBlack" />

                        <ImageButton
                            android:id="@+id/btn_add_day"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_add_circle_black_24dp" />
                    </LinearLayout>

                    <com.myubeo.fssapp.design.LayoutDay
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.myubeo.fssapp.design.LayoutDay>

                    <LinearLayout
                        android:id="@+id/layout_day"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_logout"
                    android:text="@string/logout" />

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_create"
                    android:text="@string/create" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>