<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/m_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_height_header"
        android:background="@color/colorHead"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin_logo"
            android:layout_marginBottom="@dimen/m_margin_logo"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo_company" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorLogin"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                >

                <RelativeLayout
                    android:id="@+id/layout_xacthuc"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@color/colorHead"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/text_xacThuc"
                        style="@style/Label_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_accountverification"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_logo"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center">
                    
                    <RelativeLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_logo"
                        android:padding="10dp"
                        >

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:visibility="gone"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/logo_login"
                            >

                        </de.hdodenhof.circleimageview.CircleImageView>

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorInput"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_username" />
                        </LinearLayout>

                        <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:background="#dddddd" />

                        <EditText
                            android:id="@+id/edt_login_username"
                            style="@style/EditText_Style"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:ems="10"
                            android:hint="@string/edt_usename"
                            android:inputType="textNoSuggestions"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:textColor="@color/black_text"
                            android:textColorHint="@color/text_hint_color_bgwhite"
                            android:textCursorDrawable="@drawable/shape_textcursoredittext" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#dddddd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorInput"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_password" />
                        </LinearLayout>

                        <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:background="#dddddd" />

                        <EditText
                            android:id="@+id/edt_login_pass"
                            style="@style/EditText_Style"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="0dp"
                            android:ems="10"
                            android:hint="@string/edt_password"
                            android:inputType="textNoSuggestions|textPassword"
                            android:singleLine="true"
                            android:textColor="@color/black_text"
                            android:textColorHint="@color/text_hint_color_bgwhite"
                            android:textCursorDrawable="@drawable/shape_textcursoredittext" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/Label_Style"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/background_button_login"
                        android:gravity="center"
                        android:text="@string/btn_login">

                    </Button>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>